--- a/peerRental/static/style.css
+++ b/peerRental/static/style.css
@@ -1,4 +1,27 @@
+*{
+    scroll-behavior: smooth;
+}
 #footer-main{
-    background-color: #7625e8;
+    background-color: #71D94C;
     padding:10px 0;
+}
+.error{
+    background-color: rgb(247, 72, 72);
+    padding: 5px;
+}
+.info{
+    background-color: rgb(72, 133, 247);
+    padding: 5px;
+}
+.debug{
+    background-color: rgb(54, 68, 192);
+    padding: 5px;
+}
+.warning{
+    background-color: rgb(215, 247, 72);
+    padding: 5px;
+}
+.success{
+    background-color: rgb(42, 223, 102);
+    padding: 5px;
 }
