--- a/peerRental/products/templates/uploadprod.html
+++ b/peerRental/products/templates/uploadprod.html
@@ -35,7 +35,7 @@
     <div class="modal-dialog">
       <div class="modal-content rounded-4 shadow">
         <div class="modal-header p-5 pb-4 border-bottom-0">
-          <h1 class="fw-bold mb-0 fs-2">Sign up for free</h1>
+          <h1 class="fw-bold mb-0 fs-2">Upload Product</h1>
         </div>
   
         <div class="p-5 pt-0">
