--- a/peerRental/products/templates/uploadprod.html
+++ b/peerRental/products/templates/uploadprod.html
@@ -39,7 +39,7 @@
         </div>
   
         <div class="p-5 pt-0">
-          <form class="" method="POST">
+          <form class="" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {% render_field forms.title class="form-control mb-3" placeholder="Enter Title" name="title" %}                
             {% render_field forms.description class="form-control mb-3" placeholder="Enter Description" name="description" %}                
